# CEC-Inventory-Automation

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENT_RUNBOOK.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECRETS-AND-DATABASE.md  docker-compose.yml  justfile
.claude/: settings.json
.claude/hooks/: check-doc-dating.sh  enforce-doc-compliance.sh  session-start.sh
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/api/: Cargo.toml  Dockerfile
crates/api/src/: auth.rs  costing.rs  error.rs  events.rs  extractor.rs  lib.rs  main.rs  warranty.rs
crates/api/src/routes/: catalog.rs  direct.rs  intake.rs  mod.rs  purchases.rs  reports.rs  rma.rs  scan.rs  shipments.rs  stock.rs  systems.rs  ui.rs  units.rs  warranty.rs
crates/api/tests/: api.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/poller/: Cargo.toml  Dockerfile
crates/poller/src/: main.rs
crates/tracking/: Cargo.toml
crates/tracking/src/: carrier.rs  lib.rs  poll.rs  trackingmore.rs
docs/: API.md  AUDIT-2026-06-27.md  CEC-Inventory-System-Scope.md  DECISIONS.md  DESIGN-procurement-intake.md  HANDOFF.md  INTEGRATION.md  TODO.md
migrations/: 0001_init.sql  0002_app_user.sql  0003_integrity_hardening.sql  0004_app_user_role.sql  0005_api_token.sql  0006_policy_unique.sql
scripts/: _pglib.sh  db_backup.sh  db_restore.sh  gen_secrets.sh  restore_drill.sh  vlm_keepwarm.sh
scripts/systemd/: cec-backup.service  cec-backup.timer  cec-vlm-keepwarm.service  cec-vlm-keepwarm.timer
services/extractor/: .env.example  Dockerfile  README.md  app.py  extractor.py  requirements.txt  test_extractor.py  test_vision.py  vision.py
