[workspace]
resolver = "2"
members = ["crates/api", "crates/poller", "crates/domain", "crates/tracking"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Critical Error Computing"]

# Versions are a starting point. The agent should run `cargo update` and confirm the
# latest compatible majors on crates.io at build time, then adjust code if a major moved.
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid", "rust_decimal", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
