[workspace]
resolver = "2"
members = ["crates/api", "crates/poller", "crates/domain", "crates/tracking"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
authors = ["Critical Error Computing"]

# Versions are a starting point. The agent should run `cargo update` and confirm the
# latest compatible majors on crates.io at build time, then adjust code if a major moved.
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["cookie", "cookie-signed"] }
argon2 = "0.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid", "rust_decimal", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
async-trait = "0.1"
regex = "1"
# default-features off so we use rustls only (no native-tls/openssl-sys) — matches sqlx's
# tls-rustls and keeps openssl out of the supply chain / image (audit: supply-chain hardening).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "charset"] }
base64 = "0.22"
sha2 = "0.10"
