[package]
name = "cec-inventory-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
cec-inventory-domain = { path = "../domain" }
cec-inventory-tracking = { path = "../tracking" }

[dev-dependencies]
reqwest = { workspace = true, features = ["multipart"] }
