[package]
name = "cec-inventory-tracking"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait.workspace = true
cec-inventory-domain = { path = "../domain" }
